--- a/todaysroom/src/main/webapp/main_resource/css/store.css
+++ b/todaysroom/src/main/webapp/main_resource/css/store.css
@@ -238,7 +238,7 @@
     padding: 10px;
     background-color: #f5f5f5;
     border-radius: 6px;
-    display: none;
+   /*  display: none; */
 }
 
 .selling-option-item__production {
@@ -431,3 +431,12 @@
     padding: 12px 50px;
     width: auto;
 }
+
+.checkpoint {
+	display: block;
+}
+
+.show_product {
+    display: block;
+}
+
