--- a/todaysroom/src/main/webapp/main_resource/css/contractor.css
+++ b/todaysroom/src/main/webapp/main_resource/css/contractor.css
@@ -1,9 +1,13 @@
 #contractor-list-container{
 	width:720px;
-	height: 100vh;
 	margin:0 auto;
 	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-bottom: 100px;
+}
+
+#contractor-list-container>h2{
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 .list-items{
