--- a/todaysroom/src/main/webapp/main_resource/css/store.css
+++ b/todaysroom/src/main/webapp/main_resource/css/store.css
@@ -440,3 +440,85 @@
     display: block;
 }
 
+.storepage {
+	left: 50%;
+	position: relative;
+}
+
+.commerce-category-list__title {
+    margin: 0 0 27px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #000;
+}
+
+ol, ul {
+    list-style: none;
+}
+.category-feed__side-bar {
+    display: block;
+}
+
+.commerce-category-list {
+    max-width: 160px;
+}
+
+.commerce-category-tree__entry__header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    min-width: 0;
+    height: 23px;
+    padding: 0 0 10px;
+    color: #000;
+    margin: 10px
+}
+
+.commerce-category-tree__entry__title {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 0px;
+    -moz-box-flex: 1;
+    -moz-flex: 1 0 0px;
+    -ms-flex: 1 0 0px;
+    flex: 1 0 0px;
+    min-width: 0;
+    font-size: 15px;
+    line-height: 23px;
+    white-space: nowrap;
+    overflow: hidden;
+    transition: opacity .1s;
+}
+
+.commerce-category-tree__entry__expand {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -moz-box-flex: 0;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    margin: 0;
+    padding: 0 0 0 5px;
+    line-height: 23px;
+    border: none;
+    background: none;
+    transition: opacity .1s;
+}
+
+a {
+	color: black;
+}
+
+.commerce-category-tree__entry__children .commerce-category-tree__entry__title {
+    color: #424242;
+}
+
+.hidden {
+	display: none;
+}
