--- a/todaysroom/src/main/webapp/main_resource/css/product_style.css
+++ b/todaysroom/src/main/webapp/main_resource/css/product_style.css
@@ -21,7 +21,7 @@
 #product_insert_label{
 	margin-bottom: 1.5rem !important;
 	font-weight: bold;
-	margin-right: 30px;
+	margin-right: 70px;
 }
 
 
@@ -50,6 +50,11 @@
 
 
 .ProductList{
+	width: 65%;
+    height: 400px;
+}
+
+.ScrapList{
 	width: 65%;
     height: 400px;
 }
@@ -112,10 +117,153 @@
 }
 
 
+.scrap_list{
+	border: solid;
+    width: 1080px;
+    height: 1000px;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+	
+}
+
+.scrapList_header{
+text-align: center;
+    margin-top: 100px;
+    }
+
+
+.scrap_img{
+	border: solid;
+    width: 200px;
+    height: 200px;
+	
+}
+
+.scrap_board_title{
+	border: solid;
+    width: 200px;
+}
+
+.scrap_nav a{
+	    margin: 30px;
+}
+
+.scrap_1_list{
+	float: left;
+    margin: 50px;
+}
+
+
+@charset "EUC-KR";
+.contents-col-lg-6{
+	-ms-flex:0 0 100%;
+	flex:0 0 100%;
+	max-width:100%
+	};
+
+.contents-row login_form{
+	max-width: 80%;
+    margin: auto;
+    float: none;
+}
+
+#contents-register_form{
+	max-width: 80%;
+    margin: auto;
+    float: none;
+}
+
+.dropdown_bang_selection{
+	position: absolute;
+	margin: 10px 10px;
+}
+
+.col-md-12{
+	margin-bottom: 30px;
+}
+
+#dropdownMenuButton{
+	margin-left: 30px;
+}
+
+.selectoption{
+	position: absolute;
+	margin-left: 150px;
+}
+
+.login_form .form-group{
+	margin-bottom: 50px;
+}
+
+.contents-form-control{
+	height: 40px;
+}
+
+.sectionoption{
+	position: absolute;
+}
+
+#color_btn{
+	border-radius: 5em;
+}
+
+.board_select_option{
+	-webkit-tap-highlight-color: transparent;
+    background-color: #fff;
+    border-radius: 5px;
+    border: solid 1px #e8e8e8;
+    box-sizing: border-box;
+    clear: both;
+    cursor: pointer;
+    display: block;
+    float: left;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: normal;
+    height: 42px;
+    line-height: 40px;
+    outline: none;
+    padding-left: 18px;
+    padding-right: 30px;
+    position: relative;
+    text-align: left !important;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    white-space: nowrap;
+    width: auto;
+    color: currentColor;
+}
+
+#board_color_select_option{
+	    background-color: aliceblue;
+}
 
 
 
 
+#product_insert_label_content{
+	float: left;
+    margin-left: 87px;
+    margin-right: 156px;
+    font-weight: bold;
+}
+
+#store_content{
+	width: 500px;
+    height: 300px;
+    margin-left: 14px;
+}
+
+
+#product_header{
+	background: url(../../main_resource/img/product_register_img.png) no-repeat;
+    background-size: cover;
+}
 
 
 
