Contractor 페이징 처리까지 완료

--- a/todaysroom/src/main/webapp/main_resource/css/contractor.css
+++ b/todaysroom/src/main/webapp/main_resource/css/contractor.css
@@ -31,6 +31,10 @@
 	padding-right: 10px;
 }
 
+.img-wrap img{
+	width:100%;
+}
+
 .list-items .content-wrap{
 	display:inline-block;
 	width: 50%;
@@ -45,4 +49,16 @@
 
 .bname{
 	display: inline-block;
+}
+
+#page-area{
+	text-align: right;
+}
+
+#page-area .pages{
+	cursor: pointer;
+	display: inline-block;
+	margin: 2px;
+	padding: 0 8px;
+	border: 1px solid black;
 }
