--- a/todaysroom/src/main/webapp/main_resource/css/product_style.css
+++ b/todaysroom/src/main/webapp/main_resource/css/product_style.css
@@ -265,5 +265,12 @@ text-align: center;
     background-size: cover;
 }
 
+#select-boxes{
+	width: 60%;
+    float: right;
+    margin-right: 50px;
+}
 
-
+#select-boxes .nice-select{
+	clear: none !important;
+}
