--- a/todaysroom/src/main/webapp/main_resource/css/comments.css
+++ b/todaysroom/src/main/webapp/main_resource/css/comments.css
@@ -49,3 +49,32 @@
 	float: left;
     margin-right: 10px;
 }
+#comments_modify_btn, #comments_remove_btn{
+	font-size: 13px;
+    color: #cccccc;
+}
+
+#comments_modify_btn{
+	float : left;
+}
+
+#report_modal {
+        display: none;
+        width: 680px;
+        padding: 20px 60px;
+        background-color: #fefefe;
+        border: 1px solid #888;
+        border-radius: 3px;
+    }
+
+#report_modal .modal_close_btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.not_scroll{
+	position: fixed;
+	overflow: hidden;
+	width: 100%;
+	height: 100%
+}
