--- a/todaysroom/src/main/webapp/main_resource/css/header.css
+++ b/todaysroom/src/main/webapp/main_resource/css/header.css
@@ -47,3 +47,13 @@
 	position:relative;
 }
 
+ul#ui-id-1{
+	border: 1px solid black;
+    background-color: white;
+    width: 200px !important;
+    z-index: 9999;
+}
+
+ul#ui-id-1 li{
+	cursor: pointer;
+}
