페이지도전

--- a/todaysroom/src/main/webapp/main_resource/css/scrap_style.css
+++ b/todaysroom/src/main/webapp/main_resource/css/scrap_style.css
@@ -355,3 +355,9 @@ section.blog{
 	padding-right: 5px !important;
 	max-width : none !important;
 }
+
+
+.card-blog__link{
+	border: none !important;
+	background: none !important;
+}
