--- a/todaysroom/src/main/webapp/main_resource/css/store.css
+++ b/todaysroom/src/main/webapp/main_resource/css/store.css
@@ -1,8 +1,13 @@
-@charset "EUC-KR";
+@charset "UTF-8";
 
 .row_product_hw {
-	float: left !important;
-	margin-right: 20px;
+   float: left !important;
+   margin-right: 20px;
+   display: table;
+}
+
+.lattest-product-area .row {
+   height: 400px;
 }
 
 .card-img {
