--- a/todaysroom/src/main/webapp/main_resource/css/review.css
+++ b/todaysroom/src/main/webapp/main_resource/css/review.css
@@ -186,3 +186,12 @@
     	margin-left: 0 !important;
     	border-bottom: 1px solid #ededed;
     }
+    
+    
+    #star_grade a{
+        text-decoration: none;
+        color: gray;
+    }
+    #star_grade a.on{
+        color: red;
+    }
